Updated Cli app case 2 and added a method in API client to getAircraftByPassengerId